--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,18 @@ dependencies:
   firebase_messaging: ^16.0.0
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
+  google_maps_flutter: ^2.12.3
+  vibration: ^3.1.3
+  sqflite: ^2.4.2
+  connectivity_plus: ^6.1.5
+  another_telephony: ^0.4.1
+  permission_handler: ^12.0.1
+  flutter_background_service: ^5.1.0
+  flutter_background_service_android: ^6.3.1
+  workmanager: ^0.9.0+3
+  wakelock_plus: ^1.3.2
+  tflite_flutter: ^0.11.0
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
@@ -75,8 +87,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/models/tourist_flow_model.tflite
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
